--- a/Woopons/Storyboards/Base.lproj/Main.storyboard
+++ b/Woopons/Storyboards/Base.lproj/Main.storyboard
@@ -223,8 +223,7 @@
                                         <rect key="frame" x="0.0" y="60" width="335" height="40"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k2A-NC-fB7">
-                                                <rect key="frame" x="15" y="6.5" width="305" height="27"/>
-                                                <color key="textColor" name="blackText"/>
+                                                <rect key="frame" x="15" y="6.5" width="263" height="27"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Light" family="Poppins" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 <userDefinedRuntimeAttributes>
@@ -239,11 +238,26 @@
                                                     <outlet property="delegate" destination="BZK-kt-dXo" id="W0w-JX-1MY"/>
                                                 </connections>
                                             </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFu-cj-gQ0">
+                                                <rect key="frame" x="288" y="12" width="32" height="16"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="16" id="CXO-Hc-v13"/>
+                                                    <constraint firstAttribute="width" constant="32" id="rpj-U2-Un3"/>
+                                                </constraints>
+                                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="eye.slash" catalog="system" title=" "/>
+                                                <connections>
+                                                    <action selector="iconActionWithSender:" destination="BZK-kt-dXo" eventType="touchUpInside" id="070-8n-11T"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" name="textFieldBg"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="k2A-NC-fB7" secondAttribute="trailing" constant="15" id="cYd-XI-18t"/>
+                                            <constraint firstAttribute="trailing" secondItem="gFu-cj-gQ0" secondAttribute="trailing" constant="15" id="BAG-cI-Xdx"/>
+                                            <constraint firstItem="gFu-cj-gQ0" firstAttribute="leading" secondItem="k2A-NC-fB7" secondAttribute="trailing" constant="10" id="EOc-6q-0am"/>
                                             <constraint firstItem="k2A-NC-fB7" firstAttribute="leading" secondItem="nJs-ck-3ZN" secondAttribute="leading" constant="15" id="cqf-Ie-jvw"/>
+                                            <constraint firstItem="gFu-cj-gQ0" firstAttribute="centerY" secondItem="nJs-ck-3ZN" secondAttribute="centerY" id="paH-RG-Dys"/>
                                             <constraint firstItem="k2A-NC-fB7" firstAttribute="centerY" secondItem="nJs-ck-3ZN" secondAttribute="centerY" id="tyj-Ml-8NK"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
@@ -286,6 +300,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="aIr-9q-Kah"/>
                     <connections>
+                        <outlet property="eyeButton" destination="gFu-cj-gQ0" id="ACt-gU-dZF"/>
                         <outlet property="forgotButton" destination="mpa-6i-A0e" id="euE-Bs-Oog"/>
                         <outlet property="passwordTextField" destination="k2A-NC-fB7" id="YpL-zJ-y46"/>
                         <outlet property="usernameTextField" destination="UaO-Fy-uBy" id="J3j-Lb-m9Z"/>
@@ -328,7 +343,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGu-4b-i0R">
-                                <rect key="frame" x="20" y="246.5" width="335" height="40"/>
+                                <rect key="frame" x="20" y="272.5" width="335" height="40"/>
                                 <color key="backgroundColor" name="primaryRed"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="YEz-dg-0Fb"/>
@@ -347,7 +362,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Haa-yV-FOS">
-                                <rect key="frame" x="20" y="166.5" width="335" height="40"/>
+                                <rect key="frame" x="20" y="192.5" width="335" height="40"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EfM-6q-ksU">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="40"/>
@@ -386,8 +401,8 @@
                                     <constraint firstAttribute="height" constant="40" id="R7K-Pj-rKS"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your email address to get 4 digit code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KL4-zA-HEc">
-                                <rect key="frame" x="15" y="100" width="345" height="26.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your registered email address to get the forgot password link" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KL4-zA-HEc">
+                                <rect key="frame" x="15" y="100" width="345" height="52.5"/>
                                 <fontDescription key="fontDescription" name="Poppins-Light" family="Poppins" pointSize="16"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1034,10 +1049,8 @@
         <image name="1" width="430" height="932"/>
         <image name="2" width="430" height="932"/>
         <image name="3" width="430" height="932"/>
+        <image name="eye.slash" catalog="system" width="128" height="84"/>
         <image name="splash" width="313" height="153"/>
-        <namedColor name="blackText">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="circleColor">
             <color red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
